feat: sections' content

--- a/styles/_footer.css
+++ b/styles/_footer.css
@@ -9,6 +9,10 @@
   align-items: center;
 }
 
+.footer__copyright {
+  font-size: 22px;
+}
+
 .footer__icons {
   position: relative;
   display: flex;
