--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,7 @@
 @import './_footer.css';
 @import './_navbar.css';
 @import './_header.css';
+@import './_section.css';
 
 /* #F1F1F2 */
 /* #BCBABE */
@@ -25,7 +26,7 @@
 html,
 body {
   width: 100%;
-  background: linear-gradient(0deg, rgba(136,203,171,1) 0%, rgba(0,13,60,1) 100%);
+  background: linear-gradient(0deg, #283655 0%, #4D648D 50%, #D0E1F9 100%);
 }
 
 
@@ -33,13 +34,18 @@ main {
   padding-top: 50px;
 }
 
+
+h1, h2, p {
+  font-family: 'Tourney', cursive;
+}
+
 /* ---- Layout Rules ---- */
 
 
-section {
+/* section {
   position: relative;
   min-height: 80vh;
-}
+} */
 
 
 /* ---- Module Rules ---- */
@@ -75,28 +81,28 @@ section {
 
 /* ---- Theme Rules ---- */
 /* Landing Container Styles */
-.landing__container {
+/* .landing__container {
   padding: 1em;
   text-align: left;
-}
+} */
 
-@media only screen and (min-width: 35em){
+/* @media only screen and (min-width: 35em){
   .landing__container {
       max-width: 50em;
       padding: 4em;
   }
-}
-
+} */
+/* 
 section:nth-of-type(even) .landing__container {
   margin-right: 0;
   margin-left: auto;
   text-align: right; 
-}
+} */
 
 /* Background Circles */
 /* Note that background circles are created with psuedo elements before and after */
 /* Circles appear to be random do to use of :nth-of-type psuedo class */
-section:nth-of-type(odd) .landing__container::before {
+/* section:nth-of-type(odd) .landing__container::before {
   content: '';
   background: rgba(255, 255, 255, 0.187);
   position: absolute;
@@ -121,9 +127,9 @@ section:nth-of-type(even) .landing__container::before {
   border-radius: 50%;
   opacity: 0;
   transition: ease 0.5s all;
-}
+} */
 
-section:nth-of-type(3n) .landing__container::after {
+/* section:nth-of-type(3n) .landing__container::after {
   content: '';
   background: rgb(255,255,255);
   background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
@@ -151,29 +157,12 @@ section:nth-of-type(3n + 1) .landing__container::after {
   border-radius: 50%;
   opacity: 0;
   transition: ease 0.5s all;
-}
+} */
 
 
-/* ---- Theme State Rules ---- */
-/* Section Active Styles */
-/* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
-section.your-active-class {
-  background: rgb(0, 0, 0);
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
-}
-
-section.your-active-class .landing__container::before {
-  opacity: 1;
-  animation: rotate 4s linear 0s infinite forwards;
-}
-
-section.your-active-class .landing__container::after {
-  opacity: 1;
-  animation: rotate 5s linear 0s infinite forwards reverse;
-}
 
 /* Section Active Styles Keyframe Animations */
-@keyframes rotate {
+/* @keyframes rotate {
 from {
   transform: rotate(0deg)
              translate(-1em)
@@ -184,4 +173,4 @@ to {
              translate(-1em) 
              rotate(-360deg);
 }
-}
+} */
