--- a/styles/_navbar.css
+++ b/styles/_navbar.css
@@ -13,15 +13,15 @@
 }
 
 .navbar__title {
-  font-size: 35px;
-  font-family: 'Tourney', cursive;
+  font-size: 38px;
+  display: block;
 }
 
 .navbar__title:before {
   content: '';
   float: left;
-  height: 35px;
-  width: 35px;
+  height: 40px;
+  width: 40px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -31,14 +31,14 @@
 
 .nav__link {
   display: inline-block;
-  font-family: 'Tourney', cursive;
-  font-size: 25px;
-  font-weight: 100;
+  font-size: 30px;
+  font-weight: 400;
   cursor: pointer;
+  transition: .2s;
 }
 
 .nav__link:not(:first-child) {
-  margin-left: 10px;
+  margin-left: 15px;
 }
 
 .nav__link:hover {
@@ -47,7 +47,6 @@
 
 .nav__link:active {
   color: #4D648D;
-  transition: 0.3s;
 }
 
 .active-nav {
