--- a/styles/_footer.css
+++ b/styles/_footer.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 70px;
   background: #1E1F26;
-  padding: 10px 120px 10px 20px;
+  padding: 10px 120px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -54,9 +54,21 @@
 
 @media (max-width: 960px) {
   .page__footer {
+    height: 150px;
     padding: 10px 15px;
+    flex-direction: column;
+    justify-content: center;
   }
+  
+  .footer__copyright {
+    font-size: 20px;
+    text-align: center;
+  }
+
   .footer__icons {
-    margin-left: 30px;
+    /* align-self: flex-start; */
+
+    margin-top: 20px;
   }
+  
 }
