--- a/styles/index.css
+++ b/styles/index.css
@@ -64,6 +64,27 @@ h1, h2, p {
   background-image: url('../images/rocket.svg');
 }
 
+
+@media (min-width: 1920px) {
+  #scroll__top {
+    right: 2vw;
+    bottom: 2vw;
+    width: 6vw;
+    height: 6vw;
+  }
+
+  .scroll__icon {
+    width: 4vw;
+    height: 4vw;
+  }
+}
+
+/* 
+@media (max-width: 768px) {
+
+} */
+
+
 /* section {
   position: relative;
   min-height: 80vh;
