--- a/styles/section.css
+++ b/styles/section.css
@@ -19,7 +19,6 @@ section {
 
 #section1 h1 {
   font-size: 6.5vw;
-  color: #1E1F26;
   align-self: center;
   text-align: center;
   width: 50vw;
@@ -28,12 +27,14 @@ section {
 #section1 p {
   font-family: 'Tourney', cursive;
   font-size: 3.5vw;
-  color: #1E1F26;
   text-align: center;
 }
 
 #section1 .section__container {
   padding: 7vw 3vw 5vw 3vw;
+}
+
+h1 {
 }
 
 h2 {
@@ -49,12 +50,8 @@ p {
   align-self: flex-end;
 }
 
-#section4 h2 {
-  color: #1E1F26;
-}
 
 #section4 p {
-  color: #1E1F26;
   align-self: flex-start;
 }
 
