--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
-@import './footer.css';
 @import './navbar.css';
 @import './section.css';
-
+@import './footer.css';
+@import './scroll_top.css';
 
 * {
   margin: 0;
@@ -28,161 +28,3 @@ h1, h2, p {
   font-family: 'Tourney', cursive;
   font-weight: 300;
 }
-
-
-#scroll__top {
-  position: fixed;
-  right: 20px;
-  bottom: 20px;
-  z-index: 100;
-  width: 60px;
-  height: 60px;
-  background: #729be2;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  display: none;
-  z-index: 80;
-}
-
-#scroll__top:hover {
-  background: #3d7ef0;
-}
-
-#scroll__top:active {
-  background: #4D648D;
-}
-
-.scroll__icon {
-  width: 40px;
-  height: 40px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-image: url('../images/rocket.svg');
-}
-
-
-@media (min-width: 1920px) {
-  #scroll__top {
-    right: 2vw;
-    bottom: 2vw;
-    width: 6vw;
-    height: 6vw;
-  }
-
-  .scroll__icon {
-    width: 4vw;
-    height: 4vw;
-  }
-}
-
-/* 
-@media (max-width: 768px) {
-
-} */
-
-
-/* section {
-  position: relative;
-  min-height: 80vh;
-} */
-
-
-/* ---- Theme Rules ---- */
-/* Landing Container Styles */
-/* .landing__container {
-  padding: 1em;
-  text-align: left;
-} */
-
-/* @media only screen and (min-width: 35em){
-  .landing__container {
-      max-width: 50em;
-      padding: 4em;
-  }
-} */
-/* 
-section:nth-of-type(even) .landing__container {
-  margin-right: 0;
-  margin-left: auto;
-  text-align: right; 
-} */
-
-/* Background Circles */
-/* Note that background circles are created with psuedo elements before and after */
-/* Circles appear to be random do to use of :nth-of-type psuedo class */
-/* section:nth-of-type(odd) .landing__container::before {
-  content: '';
-  background: rgba(255, 255, 255, 0.187);
-  position: absolute;
-  z-index: -5;
-  width: 20vh;
-  height: 20vh;
-  border-radius: 50%;
-  opacity: 0;
-  transition: ease 0.5s all;
-}
-
-section:nth-of-type(even) .landing__container::before {
-  content: '';
-  background: rgb(255,255,255);
-  background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
-  position: absolute;
-  top: 3em;
-  right: 3em;
-  z-index: -5;
-  width: 10vh;
-  height: 10vh;
-  border-radius: 50%;
-  opacity: 0;
-  transition: ease 0.5s all;
-} */
-
-/* section:nth-of-type(3n) .landing__container::after {
-  content: '';
-  background: rgb(255,255,255);
-  background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  z-index: -5;
-  width: 10vh;
-  height: 10vh;
-  border-radius: 50%;
-  opacity: 0;
-  transition: ease 0.5s all;
-}
-
-section:nth-of-type(3n + 1) .landing__container::after {
-  content: '';
-  background: rgb(255,255,255);
-  background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
-  position: absolute;
-  right: 20vw;
-  bottom: -5em;
-  z-index: -5;
-  width: 15vh;
-  height: 15vh;
-  border-radius: 50%;
-  opacity: 0;
-  transition: ease 0.5s all;
-} */
-
-
-
-/* Section Active Styles Keyframe Animations */
-/* @keyframes rotate {
-from {
-  transform: rotate(0deg)
-             translate(-1em)
-             rotate(0deg);
-}
-to {
-  transform: rotate(360deg)
-             translate(-1em) 
-             rotate(-360deg);
-}
-} */
