--- a/styles/section.css
+++ b/styles/section.css
@@ -1,7 +1,8 @@
 .section__container {
   position: relative;
-  min-height: 100vh;
-  padding: 6vw 3vw;
+  height: 100vh;
+  min-height: 400px;
+  padding: 9vw 3vw 5vw 3vw;
   text-align: left;
   display: flex;
   flex-direction: column;
@@ -31,10 +32,7 @@ section {
 }
 
 #section1 .section__container {
-  padding: 7vw 3vw 5vw 3vw;
-}
-
-h1 {
+  padding: 12vw 3vw 5vw 3vw;
 }
 
 h2 {
@@ -62,24 +60,28 @@ p {
 
 @media (max-width: 768px) {
   p {
-    font-size: 16px;
+    font-size: 22px;
   }
 
   h2 {
-    font-size: 24px;
+    font-size: 30px;
   }
+
+  .section__container {
+    padding: 80px 10px 50px 10px;
+  }
+  
 
   section {
     border-bottom-width: 2px;
   }
   
-
   #section1 .section__container {
-    padding: 80px 10px 50px 10px;
+    padding: 80px 25px 50px 25px;
   }
 
   #section1 h1 {
-    font-size: 30px;
+    font-size: 35px;
   }
 
   #section1 p {
